@@ -1,0 +1,12 @@
+[IDEAS]
+
+* Exotic planets.
+    - Will have unique properties, landscapes, features, ores, mobs, resources, etc., and will be "weird."
+* Easter eggs.
+    - A chance that using a Star Gate will have a 1 in 1,000 chance of teleporting the Player to one of two places:
+        - A deep, desolate void in the middle of space.
+        - A rare planet that can only be reached by meeting certain criteria.
+* Different temperatures for day and night.
+* Random alien encounters that cause various things to happen.
+* An "Omnitool" capable of harvesting specific resources.
+* 
