@@ -19,11 +19,23 @@ import zollerngalaxy.worldgen.WorldGenTallGrassZG;
 
 public class BiomeDecoratorXathius extends BiomeDecoratorZG {
 	
+	public static final Block STONE = ZGBlocks.xathStone;
+	
 	private WorldGenerator dirtGen;
+	private WorldGenerator gravelGen;
+	private WorldGenerator obsidianGen;
 	private WorldGenerator prometheanGen;
+	private WorldGenerator emeraldGen;
+	private WorldGenerator diamondGen;
+	private WorldGenerator redstoneGen;
+	private WorldGenerator ironGen;
+	private WorldGenerator goldGen;
+	private WorldGenerator tinGen;
 	
 	public int waterLakesPerChunk = 4;
 	public int lavaLakesPerChunk = 1;
+	public int oilLakesPerChunk = 4;
+	public int obsidianLakesPerChunk = 2;
 	public int xathTallGrassPerChunk = 8;
 	
 	public boolean generateLakes = true;
@@ -31,10 +43,23 @@ public class BiomeDecoratorXathius extends BiomeDecoratorZG {
 	public boolean generateCraters = false;
 	
 	public BiomeDecoratorXathius() {
-		this.dirtGen = new WorldGenMinableZG(ZGBlocks.xathDirt, ZGBlocks.xathRock,
-				EnumOreGenZG.DIRT);
-		this.prometheanGen = new WorldGenMinableZG(ZGBlocks.xathPrometheanOre, ZGBlocks.xathStone,
+		this.dirtGen = new WorldGenMinableZG(ZGBlocks.xathDirt, STONE, EnumOreGenZG.DIRT);
+		this.prometheanGen = new WorldGenMinableZG(ZGBlocks.xathPrometheanOre, STONE,
 				EnumOreGenZG.PROMETHEAN);
+		this.emeraldGen = new WorldGenMinableZG(ZGBlocks.xathEmeraldOre, STONE,
+				EnumOreGenZG.EMERALD.setGenCount(10));
+		this.diamondGen = new WorldGenMinableZG(ZGBlocks.xathDiamondOre, STONE,
+				EnumOreGenZG.DIAMOND.setGenCount(15));
+		this.redstoneGen = new WorldGenMinableZG(ZGBlocks.xathRedstoneOre, STONE,
+				EnumOreGenZG.REDSTONE.setGenCount(30));
+		this.ironGen = new WorldGenMinableZG(ZGBlocks.xathIronOre, STONE,
+				EnumOreGenZG.IRON.setGenCount(25));
+		this.goldGen = new WorldGenMinableZG(ZGBlocks.xathGoldOre, STONE,
+				EnumOreGenZG.GOLD.setGenCount(35));
+		this.tinGen = new WorldGenMinableZG(ZGBlocks.xathTinOre, STONE,
+				EnumOreGenZG.TIN.setGenCount(45));
+		this.obsidianGen = new WorldGenMinableZG(Blocks.OBSIDIAN, STONE,
+				EnumOreGenZG.OBSIDIAN.setGenCount(46));
 	}
 	
 	@Override
@@ -47,10 +72,16 @@ public class BiomeDecoratorXathius extends BiomeDecoratorZG {
 		
 		Block BLOCK_TOP = biome.topBlock.getBlock();
 		Block BLOCK_FILL = biome.fillerBlock.getBlock();
-		Block BLOCK_STONE = ZGBlocks.xathStone;
 		
 		this.generateOre(this.dirtGen, EnumOreGenZG.DIRT, world, rand);
 		this.generateOre(this.prometheanGen, EnumOreGenZG.PROMETHEAN, world, rand);
+		this.generateOre(this.emeraldGen, EnumOreGenZG.EMERALD, world, rand);
+		this.generateOre(this.diamondGen, EnumOreGenZG.DIAMOND, world, rand);
+		this.generateOre(this.redstoneGen, EnumOreGenZG.REDSTONE, world, rand);
+		this.generateOre(this.ironGen, EnumOreGenZG.IRON, world, rand);
+		this.generateOre(this.goldGen, EnumOreGenZG.GOLD, world, rand);
+		this.generateOre(this.tinGen, EnumOreGenZG.TIN, world, rand);
+		this.generateOre(this.obsidianGen, EnumOreGenZG.OBSIDIAN, world, rand);
 		
 		ChunkPrimer chunkPrimer = new ChunkPrimer();
 		
@@ -77,7 +108,18 @@ public class BiomeDecoratorXathius extends BiomeDecoratorZG {
 				y = rand.nextInt(rand.nextInt(genY) + 8);
 				
 				if (rand.nextInt(100) <= 5) {
-					(new WorldGenLakesZG(Blocks.LAVA, BLOCK_STONE)).generate(world, rand,
+					(new WorldGenLakesZG(Blocks.LAVA, STONE)).generate(world, rand,
+							this.chunkPos.add(x, y, z));
+				}
+			}
+		}
+		
+		if (this.generateLakes && this.obsidianLakesPerChunk > 0) {
+			for (int i = 0; i < this.obsidianLakesPerChunk; ++i) {
+				y = rand.nextInt(rand.nextInt(genY) + 8);
+				
+				if (rand.nextInt(100) <= 10) {
+					(new WorldGenLakesZG(Blocks.OBSIDIAN, STONE)).generate(world, rand,
 							this.chunkPos.add(x, y, z));
 				}
 			}
